# chronicler

./: .gitignore  CLAUDE.md  LICENSE  README.md  component_map.yaml  conftest.py  constraints.yaml  design.json  design.md  pact.yaml  primer.md  prompt.md  pyproject.toml  schema_hints.yaml  sops.md  task.md  trust_policy.yaml
contracts/config/: interface.json  interface.py
contracts/correlation_and_stories/: interface.py
contracts/correlation_and_stories/history/: 20260320_203004.json
contracts/engine_cli_mcp/: interface.json  interface.py
contracts/root/: interface.json  interface.py
contracts/schemas/: interface.json  interface.py
contracts/sinks/: interface.py
contracts/sources/: interface.json  interface.py
decomposition/: decisions.json  interview.json  tree.json
docs/: architecture.md  integration.md
src/chronicler/: __init__.py  cli.py  config.py  correlation.py  engine.py  engine_cli_mcp.py  mcp_server.py  root.py  schemas.py  state.py  story_manager.py
src/chronicler/sinks/: base.py  (+7 more)
tests/config/: contract_test.py  contract_test_suite.json  emission_test.py
tests/correlation_and_stories/: contract_test.py  contract_test_suite.json  emission_test.py
tests/engine_cli_mcp/: contract_test.py  contract_test_suite.json  emission_test.py
tests/root/: contract_test.py  contract_test_suite.json  emission_test.py
tests/schemas/: contract_test.py  contract_test_suite.json  emission_test.py
tests/sinks/: contract_test.py  contract_test_suite.json  emission_test.py
tests/sources/: contract_test.py  contract_test_suite.json  emission_test.py
(+21 files in other folders)
