[project]
name = "chronicler"
version = "0.2.0"
description = "Event collection and story assembly for the FOSS governance stack"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "pyyaml>=6.0", "aiohttp>=3.9", "aiofiles>=23.0"]

[project.scripts]
chronicler = "chronicler.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
